<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Hello World!!!</string>

    <!-- Subtitle text for the empty view that prompts the user to add a item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a item</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_item">Add a Item</string>

    <!-- Title for the activity to edit an existing item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="magic_powders">Invisible \'M\' Powders</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_unavailable">Quantity Unavailable</string>
    <string name="send">Send</string>
    <string name="product">Fabulous Product</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">email</string>
    <string name="hint_euros">Euros</string>
    <string name="euro_symbol">€</string>
    <string name="no_email">No email</string>
    <string name="photo00">None</string>
    <string name="photo01">Beds</string>
    <string name="photo02">Tables</string>
    <string name="photo03">Doormats</string>
    <string name="photo04">Mousepads</string>
    <string name="photo05">Guy\'s shirt</string>
    <string name="photo06">Girl\'s shirt</string>
    <string name="photo07">Pantyhouse</string>
    <string name="photo08">Figurines</string>
    <string name="photo09">Mug</string>
    <string name="photo10">CD Player</string>
    <string name="photo11">Hearts</string>
    <string name="photo12">Ships</string>
    <string name="photo13">Bottle opener</string>
    <string name="photo14">Diadems</string>
    <string name="photo15">Floats</string>
    <string name="photo16">Helicopters</string>
    <string name="photo17">Ice buckets</string>
    <string name="photo18">Board Games</string>
    <string name="photo19">Dog seats</string>
    <string name="photo20">Cat litters</string>
    <string name="zero">0</string>
    <string name="euro">€</string>

</resources>
