<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="horizontal"
    android:padding="@dimen/medium_dim"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/window"
            android:layout_height="@dimen/window"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/photo00" />

        <Spinner
            android:id="@+id/spinner_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAlbus"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_dim"
            android:gravity="center_horizontal"
            android:text="@string/quantity"
            android:textColor="@color/textColor"
            android:textSize="@dimen/medium_txt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/editorColorPrimary"
                android:onClick="minusButtonClicked"
                android:text=" - "
                android:textColor="@android:color/white"
                android:textSize="@dimen/standard_text" />

            <TextView
                android:id="@+id/edit_quantity_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="0"
                android:textAlignment="center"
                android:textSize="26sp" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/editorColorPrimary"
                android:onClick="plusButtonClicked"
                android:text=" + "
                android:textColor="@android:color/white"
                android:textSize="@dimen/standard_text" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/medium_dim"
        android:layout_marginStart="@dimen/medium_dim" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/small_dim"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/EditorUnitsStyle"
            android:text="@string/product" />

        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditorFieldStyle"
            android:background="@color/colorAlbus"
            android:hint="@string/hint_name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/EditorUnitsStyle"
            android:paddingTop="@dimen/small_dim"
            android:text="@string/price" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/colorAlbus"
                android:hint="@string/hint_euros"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorFieldStyle"
                android:layout_gravity="end"
                android:background="@color/colorAlbus"
                android:text="@string/euro_symbol" />

        </LinearLayout>

        <TextView

            style="@style/EditorUnitsStyle"
            android:paddingTop="@dimen/small_dim"
            android:text="@string/supplier" />

        <EditText
            android:id="@+id/edit_item_email"
            style="@style/EditorFieldStyle"
            android:background="@color/colorAlbus"
            android:hint="@string/hint_email"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/icon_dim"
                android:layout_height="@dimen/icon_dim"
                android:scaleType="centerCrop"
                android:src="@drawable/send" />

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/medium_dim"
                android:background="@color/editorColorPrimary"
                android:onClick="sendToEmail"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="@dimen/standard_text" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
