<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:padding="@dimen/medium_dim">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/photo00" />

    <RelativeLayout
        android:id="@+id/item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_dim"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/magic_powders"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/name"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="sans-serif"
                android:paddingTop="10dp"
                android:text="@string/zero"
                android:textAlignment="viewStart"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/items"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="sans-serif"
                android:paddingTop="10dp"
                android:text="@string/quantity"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_dim"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-dark"
                android:text="@string/euro"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_txt" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-dark"
                android:paddingTop="@dimen/small_dim"
                android:text="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/medium_txt" />

        </LinearLayout>

        <ImageView
            android:id="@+id/sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sale" />

    </LinearLayout>

</LinearLayout>